# desk

./: .gitignore  README.md  config.example  pyproject.toml  run_tests.sh
.cursor/rules/: always-test.mdc  manual-test-local-desk.mdc
.github/workflows/: default-desk-ami.yml
ami/: GIT-AUTH-README.md  WETTY-README.md  ami-build-aws-cli.json  ami-build-example.json  git-auth-with-secret.sh  install-wetty.sh
ami/aws/: install-aws-cli.sh  install-caddy-replace-response.sh  install-session-manager-plugin.sh
ami/cursor/: install-cursor-agent.sh
ami/desk/: config.ini  router-config.ini  update-desk
ami/dev/: dev-repo-daemon.sh  install-dev-repo-daemon-service.sh
ami/git/: GIT-AUTH-README.md  bots.desk-ami.json  bots.json.example  create-github-app-secret.sh  git-auth-common.sh  git-auth-with-secret.sh  git-credential-github-dispatch.sh  git-credential-helper.sh  git-credential-refresh-daemon.sh  git-credential-refresh.service  install-git-credential-refresh-service.sh  set-git-credentials-from-secret.sh
ami/recipes/: README.md  ami-build-aws-cli.json  default-desk-ami-github-actions.yml  default-desk-ami.json  my-custom-ami.json  router-ami.json  run-default-ami-build.sh  test-default-desk-ami.sh  test-home-dir-empty.sh  ubuntu-aws-cli.json
desk-api/: Makefile  README.md  lambda_handler.py  pyproject.toml
desk-api/app/: __init__.py  main.py
desk-api/app/routes/: ami_build.py  ami_builds.py  costs.py  instances.py  saved_commands.py  web_routes.py  workflow.py  workflows.py  workstations.py
desk-api/tests/: test_ami_build.py  test_ami_builds.py  test_auto_stop.py  test_create_workstation.py  test_restart.py  test_run_command.py  test_saved_commands.py  test_web_routes.py  test_workflow.py  test_workflows.py
desk-cli/: README.md  config.example  pyproject.toml
desk-cli/src/desk_cli/: __init__.py  __main__.py  cli.py
desk-cli/src/desk_cli/ami_build/: __init__.py  archive.py  aws_shim.py  build_config.py  constants.py  list_staged.py  recipe_eval.py  run_loop.py  s3_utils.py  shell.py  snapshot.py  staging.py  status_display.py  step_engine.py  sync_commands.py
desk-cli/src/desk_cli/commands/: ami.py  auto_stop.py  connect.py  copy.py  create.py  kill.py  list_.py  reap.py  route.py  route_sync.py  run.py  scp.py  start.py  stop.py  tab.py  up.py  web_router.py
desk-cli/tests/: __init__.py  conftest.py  test_ami_workflow.py  test_cli.py  test_copy.py  test_route.py  test_route_sync.py  test_web_router.py
desk-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  session-bridge.html  vite.config.ts
desk-frontend/src/: App.css  App.tsx  DataFreshnessBar.tsx  ErrorBoundary.tsx  auth.test.ts  auth.ts  index.css  main.tsx  portDisplayGroup.test.ts  portDisplayGroup.ts  queryClient.ts  queryKeys.ts  session-bridge-main.ts  session-keeper-main.ts  vite-env.d.ts  webRouteProbe.test.ts  webRouteProbe.ts
desk-infra/: README.md  build.sh  desk-control.yaml  desk-reaper.yaml  desk-router-asg.yaml  desk-router.yaml  desk-vpc.yaml  samconfig.toml
desk-infra/ami-build/: Makefile  ami-build.asl.json  handler.py
desk-infra/auth/: .gitignore  handler.py  requirements.txt
desk-infra/cloudformation/: README.md  main.yaml
desk-infra/control/: Makefile  handler.py
desk-infra/docs/: auth-flow.md
desk-infra/reaper/: Makefile  handler.py
desk-infra/scripts/: deploy.sh  full-deploy.sh
desk-sdk/: README.md  pyproject.toml
desk-sdk/src/desk/: __init__.py  ami_build.py  ami_recipe.py  aws.py  config.py  costs.py  log.py  saved_commands.py  tab_impl.py  web_routes.py  workflows.py
desk-sdk/tests/: conftest.py  test_ami_build.py  test_ami_recipe.py  test_aws.py  test_config.py  test_costs.py  test_keys.py  test_saved_commands.py  test_web_routes.py
infrastructure/: build.sh  desk-control.yaml  desk-vpc.yaml
infrastructure/ami-pipeline/: Makefile  handler.py
infrastructure/control/: Makefile  handler.py
infrastructure/reaper/: Makefile  handler.py  requirements.txt
scripts/: run_tests.sh
src/desk/: __init__.py  aws.py  cli.py  (+3 more)
tests/: test_aws.py  test_cli.py  test_config.py  test_copy.py  test_keys.py
(+32 files in other folders)
