[project]
name = "desk"
version = "0.1.0"
description = "CLI to manage EC2 workstations—SSH over SSM, private subnets only"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "click>=8.0.0",
]

[project.scripts]
desk = "desk.cli:main"

[project.optional-dependencies]
dev = [
    "cfn-lint>=0.90.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "tox>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.tox]
legacy_tox_ini = """
[tox]
env_list = py, lint

[testenv]
description = Run unit tests
deps =
    pytest>=7.0.0
    pytest-cov>=4.0.0
commands = pytest tests/ -v

[testenv:lint]
description = Lint CloudFormation templates with cfn-lint
skip_install = true
deps = cfn-lint>=0.90.0
commands = cfn-lint infrastructure/desk-vpc.yaml infrastructure/desk-reaper.yaml
"""

[tool.pytest.ini_options]
testpaths = ["tests"]
