[project]
name = "desk-monorepo"
version = "0.1.0"
description = "Desk monorepo: SDK, CLI, and infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "desk-sdk",
    "desk-cli",
]

[tool.uv.sources]
desk-sdk = { workspace = true }
desk-cli = { workspace = true }

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.uv.workspace]
members = ["desk-sdk", "desk-cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/desk_monorepo"]
