[project]
name = "desk-monorepo"
version = "0.1.0"
description = "Desk monorepo: SDK, CLI, and infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "desk-sdk",
    "desk-cli",
    "desk-api",
]

[tool.uv.sources]
desk-sdk = { workspace = true }
desk-cli = { workspace = true }
desk-api = { workspace = true }

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.uv.workspace]
members = ["desk-sdk", "desk-cli", "desk-api"]

[tool.pytest.ini_options]
# SDK and CLI tests live in desk-sdk/tests and desk-cli/tests (separate runs to avoid conftest conflict).
# Run all tests with: ./run_tests.sh  or  uv run pytest desk-sdk/tests && uv run pytest desk-cli/tests
testpaths = []

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]

