[project]
name = "desk-cli"
version = "0.1.0"
description = "Desk CLI: manage EC2 workstations (SSH over SSM)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "desk-sdk",
]

[tool.uv.sources]
desk-sdk = { workspace = true }

[project.scripts]
desk = "desk_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/desk_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/desk_cli"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
