[project]
name = "desk-sdk"
version = "0.1.0"
description = "Desk SDK: AWS and workflow helpers for EC2 workstations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/desk"]

[tool.hatch.build.targets.sdist]
include = ["src/desk"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
